# django-datatable-view

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements-docs.txt  requirements.txt  requirements_dev.txt  setup.py  tox.ini  travis.yml
.github/workflows/: main.yml  release.yml
ci/: install.sh
datatableview/: __init__.py  cache.py  columns.py  compat.py  datatables.py  exceptions.py  forms.py  handlers.py  helpers.py  models.py  options.py  urls.py  utils.py  views.py
datatableview/static/bootstrap3-editable/js/: bootstrap-editable.js  bootstrap-editable.js.bak
datatableview/static/js/: datatableview.js  datatableview.js.bak  datatableview.js.bak2  datatableview.min.js
datatableview/static/selectize/: initialize.js
datatableview/templates/datatableview/: bootstrap_structure.html  default_structure.html  legacy_structure.html
datatableview/tests/: __init__.py  test_columns.py  test_datatables.py  test_helpers.py  test_utils.py  test_views.py  testcase.py
datatableview/tests/example_project/: manage.py
datatableview/tests/example_project/example_project/: settings.py  urls.py  wsgi.py
datatableview/tests/example_project/example_project/example_app/: models.py  urls.py  views.py
datatableview/tests/example_project/example_project/example_app/fixtures/: initial_data.json  initial_data_17.json  initial_data_legacy.json  initial_data_modern.json
datatableview/tests/example_project/example_project/example_app/migrations/: 0001_initial.py  0002_entry_is_published.py
datatableview/tests/example_project/example_project/example_app/static/syntaxhighlighter/: shBrushJScript.js  shBrushPython.js  shBrushXML.js  shCore.css  shThemeDefault.css
datatableview/tests/example_project/example_project/example_app/templates/: base.html  custom_table_template.html  example_base.html  helpers_reference.html  index.html  javascript_initialization.html  migration_guide.html  valid_column_formats.html  x_editable_columns.html
datatableview/tests/example_project/example_project/example_app/templates/demos/: bootstrap_template.html  col_reorder.html  columns_reference.html  configure_datatable_object.html  configure_values_datatable_object.html  css_styling.html  helpers_reference.html  multi_filter.html  multiple_tables.html  selectize_columns.html  selectize_with_extra_args.html  x_editable_columns.html
datatableview/tests/example_project/example_project/example_app/templates/helpers/: attrgetter.html  format.html  format_date.html  itemgetter.html  link_to_model.html  make_boolean_checkmark.html  make_xeditable.html  through_filter.html
datatableview/tests/example_project/example_project/example_app/templates/meta/: columns.html  footer.html  hidden_columns.html  model.html  ordering.html  unsortable_columns.html
datatableview/tests/example_project/example_project/example_app/templatetags/: example_app_tags.py
datatableview/tests/test_app/: models.py  urls.py  views.py
datatableview/tests/test_app/fixtures/: test_data.json  test_data_legacy.json
datatableview/views/: __init__.py  base.py  legacy.py  selectize.py  xeditable.py
demo_app/: manage.py
demo_app/demo_app/: settings.py  settings_test.py  urls.py
demo_app/example_app/: models.py  urls.py  views.py
demo_app/example_app/fixtures/: initial_data.json
demo_app/example_app/migrations/: 0001_initial.py  0002_entry_is_published.py
demo_app/example_app/static/syntaxhighlighter/: shBrushJScript.js  shBrushPython.js  shBrushXML.js  shCore.css  shThemeDefault.css
demo_app/example_app/templates/: 500.html  base.html  index.html  javascript_initialization.html  migration_guide.html  valid_column_formats.html
demo_app/example_app/templates/demos/: bootstrap_template.html  col_reorder.html  columns_reference.html  configure_datatable_object.html  configure_values_datatable_object.html  css_styling.html  custom_model_fields.html  helpers_reference.html  select_row.html
demo_app/example_app/templates/meta/: columns.html  page_length.html  search_fields.html  structure_template.html
demo_app/example_app/templatetags/: example_app_tags.py
demo_app/test_app/: models.py
demo_app/test_app/fixtures/: test_data.json
docs/: Makefile  conf.py  index.rst  make.bat  migration-guide.rst
docs/datatableview/: columns.rst  datatables.rst  forms.rst  helpers.rst  index.rst  views.rst
docs/topics/: caching.rst  custom-columns.rst  index.rst  interaction-model.rst  searching.rst  sorting.rst
