[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-datatable-view"
dynamic = ["version"]
description = "This package is used in conjunction with the jQuery plugin (http://http://datatables.net/), and supports state-saving detection with (http://datatables.net/plug-ins/api).  The package consists of a class-based view, and a small collection of utilities for rendering table data from models."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "django",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "django>=4.2",
    "python-dateutil",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "flake8",
    "coverage",
    "pre-commit",
    "black",
    "bandit"
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/pivotal-energy-solutions/django-datatable-view"
Download = "https://github.com/pivotal-energy-solutions/django-datatable-view"
Thanks = "https://saythanks.io/to/rh0dium"
Source = "https://github.com/pivotal-energy-solutions/django-datatable-view/"

[tool.hatch.version]
path = "datatableview/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datatableview",
    "/datatableview/static/**/*",
    "/datatableview/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ['datatableview']
include = [
    "/datatableview/static/**/*",
    "/datatableview/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.bandit]
targets = ['datatableview', "demo_app"]
exclude_dirs = ["datatableview/tests"]
skips = ["B303", "B308", "B323", "B324", "B703"]

[tool.coverage.run]
branch = true
command_line = "demo_app/manage.py test --noinput --settings=demo_app.settings_test datatableview"
omit = [
    "*/demo_app/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 69
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"

[tool.bumper]
exclude = [".idea", ".github", "demo_app"]
version_files = ["datatableview/__init__.py"]
repo = "pivotal-energy-solutions/django-datatable-view"
report = "out.json"
